# readsparse

./: .Rbuildignore  .gitattributes  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  configure  configure.ac  instantiate_templates.py  pyproject.toml  readsparse.pc.in  requirements.txt  setup.py
R/: RcppExports.R  read_sparse.R
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
example/: readsparse_cpp_example.cpp
man/: read.sparse.Rd  readsparse_nonascii_support.Rd  write.sparse.Rd
readsparse/: __init__.py  cpp_interface.pxi  cpp_interface_size_t.pyx  cpp_interface_uint64_t.pyx
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  Rwrapper.cpp  python_streams.hpp  reader.cpp  reader.hpp  readsparse-win.def  readsparse.hpp  readsparse_detemplated.hpp  readsparse_internal.hpp  utils.hpp  writer.cpp  writer.hpp
tests/: testthat.R
tests/testthat/: test-read-write.R
timings/: timings_python.ipynb  timings_r.Rmd  timings_r.html
